--- a/corehq/apps/app_manager/templates/app_manager/ng_partials/case_summary_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/ng_partials/case_summary_view.html
@@ -1,62 +1,39 @@
+{% extends "app_manager/ng_partials/base_summary_view.html" %}
 {% load i18n %}
 {% load hq_shared_tags %}
 {% load djangular_tags %}
-{% angularjs %}
-<div id="hq-sidebar" class="col-xs-4 col-sm-3 col-lg-2 col-hq-sidebar" role="navigation">
-    <nav class="app-manager-content">
-        <ul class="nav nav-pills nav-stacked">
-            <li role="presentation">
-                <a href="#/form">
-                    <i class="fa fa-file-text-o"></i>
-                    Form Summary
-                </a>
-            </li>
-            <li role="presentation" class="active">
-                <a>
-                    <i class="fa fa-envelope-square"></i>
-                    Case Summary
-                </a>
-            </li>
-            <li role="presentation" class="divider"></li>
-            <li role="presentation">
-                <a ng-click="filterCaseTypes()">All Case Types</a>
-                <ul>
-                    <li role="presentation" ng-repeat="caseType in caseTypes" ng-class="typeSearch.name === caseType.name ? 'active' : ''">
-                        <a ng-click="filterCaseTypes(caseType.name)">{{ caseType.name }}</a>
-                    </li>
-                </ul>
+
+{% block navigation_extra %}
+    {% angularjs %}
+    <li role="presentation">
+        <a ng-click="filterCaseTypes()">{% trans "All Case Types" %}</a>
+        <ul>
+            <li role="presentation" ng-repeat="caseType in caseTypes" ng-class="typeSearch.name === caseType.name ? 'active' : ''">
+                <a ng-click="filterCaseTypes(caseType.name)">{{ caseType.name }}</a>
             </li>
         </ul>
-    </nav>
-</div>
-<div id="hq-content" class="col-xs-8 col-sm-9 col-lg-10">
+    </li>
+    {% endangularjs %}
+{% endblock %}
+
+{% block content %}
+{% angularjs %}
     <div class="page-header" style="margin-top: 0;">
-        <h1 style="font-size: 1.8em;">Case Summary</h1>
+        <h1 style="font-size: 1.8em;">{% trans "Case Summary" %}</h1>
         <form class="form-inline" role="form" ng-hide="loading">
           <div class="form-group">
-            <div class="input-group">
-              <label class="sr-only" for="caseType">Filter case types</label>
-              <input type="text" class="form-control" id="caseType" placeholder="Filter case types" ng-model="typeSearch.name">
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="sr-only" for="property">Filter properties</label>
+            <label class="sr-only" for="property">{% trans "Filter properties" %}</label>
             <input type="text" class="form-control" id="property" placeholder="Filter properties" ng-model="propertySearch.name">
           </div>
         </form>
     </div>
     <div>
-        <div class="row-fluid" ng-show="loading">
-            <div class="span12">
-                <img src="{% static 'hqwebapp/img/ajax-loader.gif' %}" alt="loading indicator" />
-                Loading ...
-            </div>
-        </div>
+        <loading></loading>
         <div class="row-fluid" ng-hide="loading">
             <div ng-repeat="caseType in caseTypes|filter:typeSearch">
                 <h3>{{ caseType.name }}</h3>
                 <div>
-                    <h5>Relationships: </h5>
+                    <h5>{% trans "Relationships:" %}</h5>
                     <ul>
                         <li ng-repeat="(relationship, case_type) in caseType.relationships">
                             {{ relationship }}: {{ case_type }}
@@ -66,18 +43,18 @@
                     <opener-closer title="Closed by" forms="caseType.closed_by" lang="lang"></opener-closer>
                 </div>
                 <div>
-                    <h5>Properties</h5>
+                    <h5>{% trans "Properties" %}</h5>
                     <table class="table" ng-repeat-end>
                         <thead>
                             <th>{% trans "Case Property" %}</th>
-                            <th>Form</th>
-                            <th>Load questions</th>
-                            <th>Save questions</th>
+                            <th>{% trans "Form" %}</th>
+                            <th>{% trans "Load questions" %}</th>
+                            <th>{% trans "Save questions" %}</th>
                         </thead>
                         <tbody ng-repeat="property in caseType.properties|filter:propertySearch">
                             <tr ng-repeat="form in property.forms">
                                 <td rowspan="{{ property.forms.length }}" ng-if="$first">{{ property.name }}</td>
-                                <td>{% verbatim %}{{ getFormName(form.form_id) }}{% endverbatim %}</td>
+                                <td>{% verbatim %}{{ getFormName(form.form_id, lang) }}{% endverbatim %}</td>
                                 <td><form-questions questions="form.load_questions"></form-questions></td>
                                 <td><form-questions questions="form.save_questions"></form-questions></td>
                             </tr>
@@ -87,5 +64,5 @@
             </div>
         </div>
     </div>
-</div>
 {% endangularjs %}
+{% endblock %}
