--- a/corehq/apps/reports/templates/reports/filters/single_option.html
+++ b/corehq/apps/reports/templates/reports/filters/single_option.html
@@ -1,17 +1,64 @@
 {% extends 'reports/filters/base.html' %}
 {% load hq_shared_tags %}
 {% block filter_content %}
-    <select id="{{ css_id }}"
-            class="{{ css_class }}"
-            data-bind="options: select_params, optionsText: 'text', optionsValue: 'val', {% if select.default_text %}optionsCaption: '{{ select.default_text }}', {% endif %}value: current_selection"
-            name="{{ slug }}"></select>
+    {% if pagination.enabled %}
+        <input id="{{ css_id }}"
+               class="input input-xxlarge"
+               placeholder="{{ select.default_text }}"
+               value="{{ select.selected|default:'' }}"
+               name="{{ slug }}" />
+    {% else %}
+        <select id="{{ css_id }}"
+                class="{{ css_class }}"
+                data-bind="options: select_params, optionsText: 'text', optionsValue: 'val', {% if select.default_text %}optionsCaption: '{{ select.default_text }}', {% endif %}value: current_selection"
+                name="{{ slug }}"></select>
+    {% endif %}
 {% endblock %}
 {% block filter_js %}
 <link href="{% static 'hqwebapp/js/lib/select2/select2.css' %}" rel="stylesheet"/>
 <script src="{% static 'hqwebapp/js/lib/select2/select2.js' %}"></script>
 <script type="text/javascript">
     $(function () {
-        ko.applyBindings({select_params: {{ select.options|JSON }}, current_selection: ko.observable('{{ select.selected|safe|default:'' }}')}, $('#{{ css_id }}').parent().get(0));
-        $('#{{ css_id }}').select2();
+        {% if pagination.enabled %}
+            $('#{{ css_id }}').select2({
+                ajax: {
+                    url: '{{ pagination.url }}',
+                    type: 'POST',
+                    dataType: 'json',
+                    quietMills: 250,
+                    data: function (term, page) {
+                        return {
+                            q: term,
+                            page: page,
+                            handler: '{{ pagination.handler }}',
+                            action: '{{ pagination.action }}'
+                        }
+                    },
+                    results: function (data, page) {
+                        if (data.success) {
+                            var limit = data.limit;
+                            var hasMore = (page * limit) < data.total;
+                            return {
+                                results: data.items,
+                                more: hasMore
+                            };
+                        } else {
+                            console.log(data.error);
+                        }
+                    }
+                },
+                allowClear: true,
+                initSelection: function (elem, callback) {
+                    var val = $(elem).val();
+                    callback({
+                        id: val,
+                        text: val
+                    });
+                }
+            });
+        {% else %}
+            ko.applyBindings({select_params: {{ select.options|JSON }}, current_selection: ko.observable('{{ select.selected|safe|default:'' }}')}, $('#{{ css_id }}').parent().get(0));
+            $('#{{ css_id }}').select2();
+        {% endif %}
     });
 </script>{% endblock %}
