--- a/corehq/apps/hqmedia/templates/hqmedia/partials/multimedia_uploader.html
+++ b/corehq/apps/hqmedia/templates/hqmedia/partials/multimedia_uploader.html
@@ -3,7 +3,7 @@
 <div class="modal hide fade" id="{{ uploader.slug }}">
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>Upload {{ uploader.media_type|title }}</h3>
+        <h3>{% trans "Upload" %} {{ uploader.media_type|title }}</h3>
     </div>
     <div class="modal-body form form-horizontal">
         <div class="control-group">
