trigger uploadComplete by passing mediaUploadComplete to data-hqmediapath

--- a/corehq/apps/app_manager/templates/app_manager/app_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/app_view.html
@@ -94,6 +94,14 @@
                 image_refs[slug].triggerUpload();
             }
         }
+        function uploadCompleteForLogo(slug, response) {
+            if(image_refs[slug]) {
+                image_refs[slug].uploadComplete(null, null, response);
+            }
+        }
+        function getPathFromSlug(slug) {
+            return image_refs[slug].path;
+        }
     </script>
     <script>
         $(function () {
