--- a/corehq/apps/app_manager/templates/app_manager/partials/app-settings.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/app-settings.html
@@ -48,7 +48,7 @@
         event: {
             mediaUploadComplete: uploadComplete
         }
-    ">Upload</a>
+    ">{% trans "Upload" %}</a>
     {% for uploader in uploaders %}
         <div data-bind="if: is_uploader('{{ uploader.slug }}')">
             {% include 'hqmedia/partials/multimedia_uploader.html' %}
