--- a/corehq/apps/style/static/style/less/components/timepicker.less
+++ b/corehq/apps/style/static/style/less/components/timepicker.less
@@ -40,7 +40,7 @@
 }
 .bootstrap-timepicker-widget {
     &.dropdown-menu {
-        padding: 2px 3px 2px 2px;
+        padding: 4px;
         &.open {
             display: inline-block;
         }
@@ -50,9 +50,7 @@
             border-right: 7px solid transparent;
             content: "";
             display: inline-block;
-            left: 9px;
             position: absolute;
-            top: -7px;
         }
         &:after {
             border-bottom: 6px solid #FFFFFF;
@@ -60,12 +58,45 @@
             border-right: 6px solid transparent;
             content: "";
             display: inline-block;
-            left: 10px;
             position: absolute;
+        }
+    }
+    &.timepicker-orient-left {
+        &:before {
+           left: 6px;
+        }
+        &:after {
+           left: 7px;
+        }
+    }
+    &.timepicker-orient-right {
+        &:before {
+           right: 6px;
+        }
+        &:after {
+           right: 7px;
+        }
+    }
+    &.timepicker-orient-top {
+        &:before {
+           top: -7px;
+        }
+        &:after {
             top: -6px;
         }
     }
-
+    &.timepicker-orient-bottom {
+        &:before {
+            bottom: -7px;
+            border-bottom: 0;
+            border-top: 7px solid #999;
+        }
+        &:after {
+            bottom: -6px;
+            border-bottom: 0;
+            border-top: 6px solid #ffffff;
+        }
+    }
     a.btn, input {
         border-radius: 4px;
     }
