--- a/corehq/apps/style/templates/style/base.html
+++ b/corehq/apps/style/templates/style/base.html
@@ -10,7 +10,7 @@
         {# todo invesitage other meta tags to put here #}
 
         {# link tags #}
-        <link rel="shortcut icon" href="{% new_static 'hqwebapp/img/favicon2.png' %}" />
+        <link rel="shortcut icon" href="{% new_static 'style/img/favicon.png' %}" />
         <link type="application/opensearchdescription+xml"
               rel="search"
               href="{% url 'osdd' %}"
@@ -63,7 +63,7 @@
         <script type="text/javascript" src="{% new_static 'style/lib/bootstrap-3.2.0/dist/js/bootstrap.min.js' %}"></script>
         <script type="text/javascript" src="{% new_static 'style/lib/jquery/plugins/jquery.form-3.51.0.min.js' %}"></script>
         <script type="text/javascript" src="{% new_static 'style/lib/underscore/underscore-1.6.0.min.js' %}"></script>
-        <script type="text/javascript" src="{% new_static 'hqwebapp/js/lib/jquery.cookie.js' %}"></script>
+        <script type="text/javascript" src="{% new_static 'style/lib/jquery-cookie/src/jquery.cookie.js' %}"></script>
         {% endcompress %}
 
         {% block head %}
@@ -160,30 +160,33 @@
 
         {# javascript below this line #}
 
-        {# JavaScript Display Logic Libaries, default is angular.js #}
-        {% ifequal js_display_logic 'knockout' %}
-            {% compress js %}
-            <script type="text/javascript" src="{% new_static 'style/lib/knockout/knockout-3.1.0.min.js' %}"></script>
-            <script type="text/javascript" src="{% new_static 'hqwebapp/ko/global.handlers.js' %}"></script>
-            {% endcompress %}
-        {% endifequal %}
-
-        {% if not js_display_logic %}
-            {% compress js %}
-            <script type="text/javascript" src="{% new_static 'style/lib/angular-1.2.27/angular.min.js' %}"></script>
-            <script type="text/javascript" src="{% new_static 'style/lib/angular-1.2.27/angular-route.min.js' %}"></script>
-            <script type="text/javascript" src="{% new_static 'style/lib/angular-1.2.27/angular-resource.min.js' %}"></script>
-            <script type="text/javascript" src="{% new_static 'style/lib/angular-ui/ui-bootstrap-tpls-0.11.2.min.js' %}"></script>
-            <script type="text/javascript" src="{% new_static 'djangular/js/django-angular.min.js' %}"></script>
-            {% endcompress %}
-        {% endif %}
-
         {# HQ Specific Libraries #}
         {% compress js %}
         <script type="text/javascript" src="{% new_static 'style/js/hq-bug-report.js' %}"></script>
         <script type="text/javascript" src="{% new_static 'style/js/layout.js' %}"></script>
         <script type="text/javascript" src="{% new_static 'style/js/form_tools.js' %}"></script>
-        <script type="text/javascript" src="{% new_static 'hqwebapp/js-custom/hq.helpers.js' %}"></script>
+        <script type="text/javascript" src="{% new_static 'style/js/hq.helpers.js' %}"></script>
+        {% endcompress %}
+
+        {# JavaScript Display Logic Libaries #}
+
+        {# Use knockout explicitly, opt to move to angular js when possible. #}
+        {% if use_knockout_js %}
+        {% compress js %}
+        <script type="text/javascript" src="{% new_static 'style/lib/knockout/knockout-3.1.0.min.js' %}"></script>
+        <script type="text/javascript" src="{% new_static 'style/lib/knockout_plugins/knockout_mapping.ko.min.js' %}"></script>
+        <script type="text/javascript" src="{% new_static 'style/ko/global_handlers.ko.js' %}"></script>
+        <script type="text/javascript" src="{% new_static 'style/ko/knockout_bindings.ko.js' %}"></script>
+        {% endcompress %}
+        {% endif %}
+
+        {# always use angular js by default, as this will be our core library #}
+        {% compress js %}
+        <script type="text/javascript" src="{% new_static 'style/lib/angular-1.2.27/angular.min.js' %}"></script>
+        <script type="text/javascript" src="{% new_static 'style/lib/angular-1.2.27/angular-route.min.js' %}"></script>
+        <script type="text/javascript" src="{% new_static 'style/lib/angular-1.2.27/angular-resource.min.js' %}"></script>
+        <script type="text/javascript" src="{% new_static 'style/lib/angular-ui/ui-bootstrap-tpls-0.11.2.min.js' %}"></script>
+        <script type="text/javascript" src="{% new_static 'djangular/js/django-angular.min.js' %}"></script>
         {% endcompress %}
 
         {% if request.use_select2 %}
