--- a/corehq/apps/hqwebapp/templates/hqwebapp/base.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/base.html
@@ -6,7 +6,7 @@
         <meta name="application-name" content="{{ SITE_NAME }}">
         <meta http-equiv="content-language" content="en">
         <link type="application/opensearchdescription+xml" rel="search" href="{% url 'osdd' %}" title="CommCare HQ"/>
-        <link rel="shortcut icon" href="{% static 'hqwebapp/img/favicon2.png' %}" />
+        <link rel="shortcut icon" href="{% static 'style/img/favicon.png' %}" />
 
         {% compress css %}
             <link type="text/less" rel="stylesheet" media="all" href="{% static 'style/less/hqstyle-core.less' %}"/>
