fix active class on type hierarchy

--- a/corehq/apps/app_manager/templates/app_manager/ng_partials/base_summary_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/ng_partials/base_summary_view.html
@@ -17,7 +17,7 @@
                     {% trans "Case Summary" %}
                 </a>
             </li>
-            <li role="presentation" class="divider"></li>
+            <li role="presentation" class="nav-divider"></li>
             {% block navigation_extra %}
             {% endblock %}
         </ul>
