--- a/corehq/apps/app_manager/templates/app_manager/module_view.html
+++ b/corehq/apps/app_manager/templates/app_manager/module_view.html
@@ -68,6 +68,7 @@
                     saveUrl: saveUrl,
                     parentModules: parentModules,
                     childCaseTypes: detail.child_case_types,
+                    fixtures: detail.fixtures,
                     parentSelect: detail.parent_select,
                     contextVariables: COMMCAREHQ.app_manager.module_view
                 });
