track clicks on 'Add Number' in Edit Mobile Workers

--- a/corehq/apps/users/templates/users/partial/basic_info_form.html
+++ b/corehq/apps/users/templates/users/partial/basic_info_form.html
@@ -99,7 +99,7 @@
     {% endblock %}
 {% endif %}
 
-<form class="form form-horizontal" name="add_phone_number" method="post">
+<form id="add_phone_number" class="form form-horizontal" name="add_phone_number" method="post">
     <input type="hidden" name="form_type" value="add-phonenumber" />
     <fieldset>
         <legend>{% trans 'Add a Phone Number' %}</legend>
