--- a/corehq/apps/users/templates/users/partial/basic_info_js_inline.html
+++ b/corehq/apps/users/templates/users/partial/basic_info_js_inline.html
@@ -15,7 +15,7 @@
     });
 </script>
 
-<script>
+<script type="text/javascript">
     $('#add_phone_number').submit(function() {
         ga_track_event('Edit Mobile Worker', 'Update phone number', '{{ couch_user.couch_id }}', {
             'hitCallback': function () {
@@ -23,5 +23,5 @@
             }
         });
         return false;
-    })
+    });
 </script>
