--- a/corehq/apps/app_manager/templates/app_manager/languages.html
+++ b/corehq/apps/app_manager/templates/app_manager/languages.html
@@ -33,14 +33,18 @@
                 {% if app.get_doc_type == "Application" %}
                     <section id="translations_ui">
                         <p class="help-block">
+                            {% blocktrans %}
                             For Java Phone (Nokia) refer to
-                            <a target="_blank" href="https://bitbucket.org/commcare/javarosa/src/default/j2me/shared-resources/resources/messages_default.txt">JavaRosa translations</a>
-                            and <a target="_blank" href="https://bitbucket.org/commcare/commcare/src/default/application/resources/messages_cc_default.txt">CommCare translations</a>.
+                            <a target="_blank" href="https://github.com/dimagi/javarosa/blob/master/j2me/shared-resources/resources/messages_default.txt">JavaRosa translations</a>
+                            and <a target="_blank" href="https://github.com/dimagi/commcare/blob/master/application/resources/messages_cc_default.txt">CommCare translations</a>.
+                            {% endblocktrans %}
                         </p>
                         <p class="help-block">
+                            {% blocktrans %}
                             For Android refer to
-                            <a target="_blank" href="https://bitbucket.org/commcare/commcare-odk/src/default/app/assets/locales/messages_ccodk_default.txt">CommCareODK translations</a>
-                            and <a target="_blank" href="https://confluence.dimagi.com/display/commcarepublic/CommCare+ODK+Form+Entry+Interface+Strings">ODK Collect translations</a>.
+                            <a target="_blank" href="https://github.com/dimagi/commcare-odk/blob/master/app/assets/locales/messages_ccodk_default.txt">CommCareODK translations</a>
+                            and <a target="_blank" href="https://help.commcarehq.org/display/commcarepublic/CommCare+ODK+Form+Entry+Interface+Strings">ODK Collect translations</a>.
+                            {% endblocktrans %}
                         </p>
                         <br/>
                     </section>
