--- a/corehq/apps/app_manager/templates/app_manager/partials/case_list.html
+++ b/corehq/apps/app_manager/templates/app_manager/partials/case_list.html
@@ -77,13 +77,6 @@
 <div data-bind="with: sortRows">
 {% if app.enable_multi_sort %}
 
-    <div class="control-group">
-        <button class="btn btn-small" data-bind="visible: !showing(), click: function(data){data.addButtonClicked(true);}">
-            <i class="icon icon-plus"></i>
-            Add sort property
-        </button>
-    </div>
-
     <div class="ui-sortable">
         <table class="table table-condensed detail-screen-table" data-bind="visible: showing">
             <thead>
@@ -112,27 +105,19 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody data-bind="foreach: sortRows().concat(templateRow), sortableList: sortRows">
+            <tbody data-bind="foreach: sortRows(), sortableList: sortRows">
                 <tr>
                     <td class="detail-screen-icon">
-                        <span data-bind="ifnot: $data instanceof SortRowTemplate">
                         <i class="grip
                                 icon-resize-vertical
                                 icon-blue"
                            style="cursor: move"></i>
-                        </span>
                     </td>
 
-                    <!-- ko ifnot: $data instanceof SortRowTemplate -->
-                    <td data-bind="html: fieldHtml"></td>
-                    <!-- /ko -->
-                    <!-- ko if: $data instanceof SortRowTemplate -->
                     <td class="detail-screen-field control-group" data-bind="css: {error: showWarning}">
                         <div data-bind="jqueryElement: textField.ui"></div>
                         <div data-bind="jqueryElement: warningElement, visible: showWarning"></div>
                     </td>
-                    <!-- /ko -->
-
 
                     <td>
                         <select data-bind="value: direction">
@@ -163,21 +148,24 @@
                     </td>
 
                     <td>
-                        <span data-bind="ifnot: $data instanceof SortRowTemplate">
-                            <a data-bind="click: $root.sortRows.removeSortRow">
-                                <i class="icon-remove icon-blue"></i>
-                            </a>
-                        </span>
-                        <span data-bind="if: $data instanceof SortRowTemplate">
-                            <a data-bind="click: $root.sortRows.addSortRowFromTemplateRow">
-                                <i data-bind="css: COMMCAREHQ.icons.ADD"></i>
-                            </a>
-                        </span>
+                        <a data-bind="click: $root.sortRows.removeSortRow">
+                            <i class="icon-remove icon-blue"></i>
+                        </a>
                     </td>
                 </tr>
             </tbody>
         </table>
     </div>
+
+    <div class="control-group">
+        <button class="btn btn-small" data-bind="
+            click: function(data){data.addSortRow('', '', '', true);}"
+        >
+            <i class="icon icon-plus"></i>
+            Add sort property
+        </button>
+    </div>
+
 {% endif %}
 </div>
 
