align case-details with form

--- a/corehq/apps/cloudcare/templates/cloudcare/cloudcare_home.html
+++ b/corehq/apps/cloudcare/templates/cloudcare/cloudcare_home.html
@@ -154,7 +154,7 @@
             (It may take a moment to start up once it has downloaded)
         {% endblocktrans %}
     </div>
-    <div id="cloudcare-main" style="position:relative;">
+    <div id="cloudcare-main" style="position:relative; width: 800px">
         {% if not apps_raw %}
             <h3>No Apps found</h3>
             {% blocktrans %}
