remove old knockout bindings file and change references to the file in style/static

--- a/corehq/apps/fixtures/templates/fixtures/fixtures_base.html
+++ b/corehq/apps/fixtures/templates/fixtures/fixtures_base.html
@@ -8,7 +8,7 @@
     <script src="{% static 'hqwebapp/js-custom/hq.legacy.js' %}"></script>
     <script src="{% static 'hqwebapp/js/lib/jquery.history.js' %}"></script>
     <script src="{% static 'hqwebapp/js/lib/knockout.mapping.js' %}"></script>
-    <script src="{% static 'hqwebapp/js/knockout-bindings.js' %}"></script>
+    <script src="{% static 'style/ko/knockout_bindings.ko.js' %}"></script>
     {% endblock %}
 {% endblock %}
 
