--- a/corehq/apps/fixtures/templates/fixtures/manage_tables.html
+++ b/corehq/apps/fixtures/templates/fixtures/manage_tables.html
@@ -5,7 +5,7 @@
 {% load i18n %}
 {% block js %}{{ block.super }}
 <script src="{% static 'hqwebapp/js/lib/knockout.mapping.js' %}"></script>
-<script src="{% static 'hqwebapp/js/knockout-bindings.js' %}"></script>
+<script src="{% static 'style/ko/knockout_bindings.ko.js' %}"></script>
 <script src="{% static 'fixtures/js/lookup-manage.js' %}"></script>
 {% endblock %}
 
