update reference to hq.helpers to the file in static/style and remove duplicate file

--- a/corehq/apps/hqwebapp/templates/hqwebapp/base.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/base.html
@@ -376,7 +376,7 @@
 
         {% block js %}
         <script src="{% static 'hqwebapp/js-custom/hqhandler.form.bugReport.js' %}"></script>
-        <script src="{% static 'hqwebapp/js-custom/hq.helpers.js' %}"></script>
+        <script src="{% static 'style/js/hq.helpers.js' %}"></script>
         <script src="{% static 'hqwebapp/js/lib/jquery.cookie.js' %}"></script>
         <script src="{% static 'hqwebapp/js/lib/jquery.timeago.js' %}"></script>
 
