--- a/corehq/apps/hqwebapp/templates/hqwebapp/base.html
+++ b/corehq/apps/hqwebapp/templates/hqwebapp/base.html
@@ -377,7 +377,7 @@
         {% block js %}
         <script src="{% static 'hqwebapp/js-custom/hqhandler.form.bugReport.js' %}"></script>
         <script src="{% static 'style/js/hq.helpers.js' %}"></script>
-        <script src="{% static 'hqwebapp/js/lib/jquery.cookie.js' %}"></script>
+        <script src="{% static 'style/lib/jquery-cookie/src/jquery.cookie.js' %}"></script>
         <script src="{% static 'hqwebapp/js/lib/jquery.timeago.js' %}"></script>
 
         <script src="{% static 'hqwebapp/js/lib/keymaster.min.js' %}"></script>
