delete dupe knockout mapping plugin file and point to new one in static/style/lib

--- a/corehq/apps/cloudcare/templates/cloudcare/config.html
+++ b/corehq/apps/cloudcare/templates/cloudcare/config.html
@@ -4,7 +4,7 @@
 
 {% block js %}{{ block.super }}
     <script src="{% static 'hqwebapp/js/main.js' %}"></script>
-    <script src="{% static 'hqwebapp/js/lib/knockout.mapping.js' %}"></script>
+    <script src="{% static 'style/lib/knockout_plugins/knockout_mapping.ko.min.js' %}"></script>
     <script src="{% static 'style/ko/knockout_bindings.ko.js' %}"></script>
 {% endblock %}
 
