--- a/corehq/apps/fixtures/templates/fixtures/fixtures_base.html
+++ b/corehq/apps/fixtures/templates/fixtures/fixtures_base.html
@@ -7,7 +7,7 @@
     <script src="{% static 'reports/javascripts/config.dataTables.bootstrap.js' %}"></script>
     <script src="{% static 'hqwebapp/js-custom/hq.legacy.js' %}"></script>
     <script src="{% static 'hqwebapp/js/lib/jquery.history.js' %}"></script>
-    <script src="{% static 'hqwebapp/js/lib/knockout.mapping.js' %}"></script>
+    <script src="{% static 'style/lib/knockout_plugins/knockout_mapping.ko.min.js' %}"></script>
     <script src="{% static 'style/ko/knockout_bindings.ko.js' %}"></script>
     {% endblock %}
 {% endblock %}
